--- a/index.html
+++ b/index.html
@@ -45,98 +45,89 @@
 
         <!--FEATURES-->
         <section>
-            <div>
+            <h2 hidden>Особенности</h2>
                 <ul>
                     <li>
-                        <h2 hidden>Особенности</h2>
-                            <h3>Внимание к деталям</h3>
-                                <p>Идейные соображения, а так же 
-                                   начало повседневной работы 
-                                   по формированию позиции.</p>
+                        <h3>Внимание к деталям</h3>
+                        <p>Идейные соображения, а так же
+                           начало повседневной работы
+                           по формированию позиции.</p>
                     </li>
-                        <li> 
-                            <h3>Пунктуальность</h3>
-                                <p>Задача организации, в особенности 
-                                   на рамки и место обучения кадров 
-                                   влечет за собой.</p>
-                        </li>
-                            <li>
-                                <h3>Планирование</h3>
-                                    <p>Равным образом консультация с 
-                                       широким активом в значительной 
-                                       степени обуславливает.</p>
-                            </li>
-                                <li>    
-                                    <h3>Современные технологии</h3>
-                                        <p>Значимость этих проблем настолько 
-                                           очевидна, что реализация плановых 
-                                           заданий.</p>
-                                </li>
+                    <li>
+                        <h3>Пунктуальность</h3>
+                        <p>Задача организации, в особенности
+                           на рамки и место обучения кадров
+                           влечет за собой.</p>
+                    </li>
+                    <li>
+                        <h3>Планирование</h3>
+                        <p>Равным образом консультация с
+                           широким активом в значительной
+                           степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <h3>Современные технологии</h3>
+                        <p>Значимость этих проблем настолько
+                           очевидна, что реализация плановых
+                           заданий.</p>
+                    </li>
                 </ul>
-            </div>
         </section>
         
         
         <!--BOX-->
         <section>
-            <div>
-                <h2>Чем мы занимаемся</h2>
-            </div>
-            <div>
-                <ul>
-                    <li>
-                        <img src="./image/box-img_1.jpg" alt="печатает на клавиатуре" width="370" height="294">
-                    </li>
-                    <li>
-                        <img src="./image/box-img_2.jpg" alt="управляет на мониторе при помощи пульта" width="370" height="294">
-                    </li>
-                    <li>
-                        <img src="./image/box-img_3.jpg" alt="создает шедевры на планшете" width="370" height="294">
-                    </li>
-                </ul>
-            </div>
-        </section>
-
-        <!--ABOUT-->
-        <section>
-            <div>
-                <h2>Наша команда</h2>
-            </div>
-            <div>
-                <ul>
-                    <li>
-                        <img src="./image/foto_1.jpg" alt="фото И.Демьяненко" width="290" height="420">
-                    </li>
-                    <li>
-                        <img src="./image/foto_2.jpg" alt="фото О.Репиной" width="290" height="420">
-                    </li>
-                    <li>
-                        <img src="./image/foto_3.jpg" alt="фото Н.Тарасова" width="290" height="420">
-                    </li>
-                    <li>
-                        <img src="./image/foto_4.jpg" alt="фото М.Ермакова" width="290" height="420">
-                    </li>
-                </ul>
-            </div>
-        </section>
-
-        <!--CONTACT INFORMATION-->
-        <section>
-            <H2 lang="en">WebStudio</H2>
+            <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <a href="https://goo.gl/maps/T49ANadvn7GRpvFc9" target="_blank" real="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                    <img src="./image/box-img_1.jpg" alt="печатает на клавиатуре" width="370" height="294">
                 </li>
                 <li>
-                    <a href="tel:+380441111111">+38 044 111 11 11</a>
-                </li>                
+                    <img src="./image/box-img_2.jpg" alt="управляет на мониторе при помощи пульта" width="370" height="294">
+                </li>
                 <li>
-                    <a href="mailto:info@example.com">info@example.com</a>
+                    <img src="./image/box-img_3.jpg" alt="создает шедевры на планшете" width="370" height="294">
                 </li>
             </ul>
         </section>
 
+        <!--ABOUT-->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./image/foto_1.jpg" alt="фото И.Демьяненко" width="290" height="420">
+                </li>
+                <li>
+                    <img src="./image/foto_2.jpg" alt="фото О.Репиной" width="290" height="420">
+                </li>
+                <li>
+                    <img src="./image/foto_3.jpg" alt="фото Н.Тарасова" width="290" height="420">
+                </li>
+                <li>
+                    <img src="./image/foto_4.jpg" alt="фото М.Ермакова" width="290" height="420">
+                </li>
+            </ul>
+        </section>
 
+        <!--CONTACT INFORMATION-->
+        <footer>
+            <section>
+                    <ul>
+                        <li>
+                            <a href="">WebStudio</a>
+                        </li> 
+                        <li>
+                            <a href="https://goo.gl/maps/T49ANadvn7GRpvFc9" target="_blank" real="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li>
+                            <a href="tel:+380441111111">+38 044 111 11 11</a>
+                        </li>                
+                        <li>
+                            <a href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                    </ul>
+            </section>
+        </footer>
     </main>
-    <footer></footer>
 </html>
