--- a/index.html
+++ b/index.html
@@ -96,17 +96,41 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./image/foto_1.jpg" alt="фото И.Демьяненко" width="290" height="420">
+                    <img src="./image/foto_1.jpg" alt="фото И.Демьяненко" width="270" height="260">
                 </li>
+                    <p>
+                        Игорь Демьяненко
+                    </p>
+                    <p>
+                        Product Designer
+                    </p>
                 <li>
-                    <img src="./image/foto_2.jpg" alt="фото О.Репиной" width="290" height="420">
+                    <img src="./image/foto_2.jpg" alt="фото О.Репиной" width="270" height="260">
                 </li>
+                    <p>
+                        Ольга Репина
+                    </p>
+                    <p>
+                        Frontend Developer
+                    </p>
                 <li>
-                    <img src="./image/foto_3.jpg" alt="фото Н.Тарасова" width="290" height="420">
+                    <img src="./image/foto_3.jpg" alt="фото Н.Тарасова" width="270" height="260">
                 </li>
+                    <p>
+                        Николай Тарасов
+                    </p>
+                    <p>
+                        Marketing
+                    </p>
                 <li>
-                    <img src="./image/foto_4.jpg" alt="фото М.Ермакова" width="290" height="420">
+                    <img src="./image/foto_4.jpg" alt="фото М.Ермакова" width="270" height="260">
                 </li>
+                    <p>
+                        Михаил Ермаков
+                    </p>
+                    <p>
+                        UI Designer
+                    </p>
             </ul>
         </section>
 
